<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.pdsd.practicaltest01.PracticalTest01aMainActivity" >
	
    <Button
        android:id="@+id/navigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/navigate" />

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:text="@string/text" >

        <requestFocus />
    </EditText>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:rowCount="3"
        android:columnCount="3" >

        <Button
            android:id="@+id/top_left"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="0"
            android:text="@string/top_left" />

        <Button
            android:id="@+id/top_right"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_row="0"
            android:text="@string/top_right" />

        <Button
            android:id="@+id/center"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="1"
            android:text="@string/center" />

        <Button
            android:id="@+id/bottom_left"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="2"
            android:text="@string/bottom_left" />

        <Button
            android:id="@+id/bottom_right"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_row="2"
            android:text="@string/bottom_right" />
      
    </GridLayout>
    
</LinearLayout>
